import org.gradle.internal.os.OperatingSystem

plugins {
	id 'com.diffplug.spotless' version '8.1.0'
	id 'io.freefair.lombok' version '9.2.0' apply false
}

String stormVersion = '1.19.0-SNAPSHOT'

def os = OperatingSystem.current()
def styluaVersion = '2.4.1'
def styluaBinaryName = os.isWindows() ? 'stylua.exe' : 'stylua'
def styluaCacheDir = layout.buildDirectory.dir("stylua/${styluaVersion}").get().asFile
def styluaBinary = new File(styluaCacheDir, styluaBinaryName)

tasks.register('installStylua') {
	group = 'verification'
	description = "Downloads StyLua v${styluaVersion} if not already cached."
	outputs.file(styluaBinary)

	doLast {
		if (styluaBinary.exists() && styluaBinary.canExecute()) {
			return
		}

		def arch = System.getProperty('os.arch')
		def normalizedArch
		if (arch == 'amd64' || arch == 'x86_64') {
			normalizedArch = 'x86_64'
		} else if (arch == 'aarch64' || arch == 'arm64') {
			normalizedArch = 'aarch64'
		} else {
			throw new GradleException("Unsupported architecture for StyLua: ${arch}")
		}

		def platform
		if (os.isMacOsX()) {
			platform = "macos-${normalizedArch}"
		} else if (os.isLinux()) {
			platform = "linux-${normalizedArch}"
		} else if (os.isWindows()) {
			platform = "windows-${normalizedArch}"
		} else {
			throw new GradleException("Unsupported OS for StyLua")
		}

		def url = "https://github.com/JohnnyMorganz/StyLua/releases/download/v${styluaVersion}/stylua-${platform}.zip"
		styluaCacheDir.mkdirs()
		def zipFile = new File(styluaCacheDir, "stylua-${platform}.zip")

		logger.lifecycle("Downloading StyLua v${styluaVersion} from ${url}")
		new URL(url).withInputStream { input ->
			zipFile.withOutputStream { it << input }
		}

		ant.unzip(src: zipFile, dest: styluaCacheDir)
		zipFile.delete()

		if (!styluaBinary.exists()) {
			throw new GradleException("StyLua binary not found at ${styluaBinary} after extraction")
		}
		styluaBinary.setExecutable(true)
	}
}

interface ModInfo {
	Property<String> getName()
	Property<String> getPoster()
	Property<String> getDescription()
	Property<String> getId()
	Property<String> getUrl()
	Property<String> getModVersion()

	Property<String> getWorkshopTitle()
	Property<String> getWorkshopId()
	Property<String> getWorkshopIdStage()
	Property<String> getWorkshopIdProd()
	Property<String> getWorkshopTags()
}

def getLocalProperty(String property, String defaultValue = null) {
	return providers.provider {
		def props = new Properties()
		def propFile = file("local.properties")

		if (propFile.exists()) {
			propFile.withInputStream { props.load(it) }
			return props.getProperty(property, defaultValue)
		} else {
			throw new GradleException("local.properties file not found!")
		}
	}
}

tasks.register('deployAll') {
	dependsOn subprojects.deployMod
}

tasks.register('uploadAll') {
	dependsOn subprojects.uploadWorkshop
}

def env = rootProject.hasProperty('env') ? rootProject.property('env') : 'dev'

def getWorkshopVisibility = {
	switch (env) {
		case 'prod':  return '0'
		default: return '3'
	}
}

def getEnvSuffix = {
	switch (env) {
		case 'prod':  return ''
		case 'stage': return '-stage'
		default: return '-dev'
	}
}

subprojects { subproj ->
	apply plugin: 'java'
	apply plugin: 'jacoco'
	apply plugin: 'com.diffplug.spotless'
	apply plugin: 'io.freefair.lombok'

	extensions.create('modInfo', ModInfo)

	afterEvaluate {
		def info = extensions.getByType(ModInfo)
		switch (env) {
			case 'prod':
				if (info.workshopIdProd.isPresent()) {
					info.workshopId.set(info.workshopIdProd.get())
				}
				break
			case 'stage':
				info.name.set("[STAGE] ${info.name.get()}")
				if (info.workshopTitle.isPresent()) {
					info.workshopTitle.set("[STAGE] ${info.workshopTitle.get()}")
				}
				if (info.workshopIdStage.isPresent()) {
					info.workshopId.set(info.workshopIdStage.get())
				}
				break
			default:
				info.name.set("[DEV] ${info.name.get()}")
				if (info.workshopTitle.isPresent()) {
					info.workshopTitle.set("[DEV] ${info.workshopTitle.get()}")
				}
				break
		}
	}

	tasks.register('extractZomboidFiles', Copy) {
		from getLocalProperty('gameDir')
		into layout.buildDirectory.dir('zomboid-classpath')
		include '**/*.class', '*.jar'
	}

	tasks.register('writeModInfo') {
		def info = project.extensions.getByType(ModInfo)
		def outputFile = layout.buildDirectory.file("mod.info")

		inputs.property("name", info.name)
		inputs.property("id", info.id.orElse("${subproj.name}-b42${getEnvSuffix()}"))
		inputs.property("description", info.description.orElse(""))

		outputs.file(outputFile)

		doLast {
			def formattedDescription = info.description.getOrElse("").trim().split('\n').join('\ndescription=')
			def f = outputFile.get().asFile
			f.text = [
                "name=${info.name.getOrElse("Unnamed Mod")}",
				"author=SentientSimulations",
				"url=https://github.com/guspuffygit/project-zomboid-java-mods",
                "poster=${info.poster.getOrElse("poster.png")}",
				"description=${formattedDescription}",
				"id=${info.id.getOrElse("${subproj.name}-b42${getEnvSuffix()}")}",
				"modversion=${info.modVersion.getOrElse("1.0")}",
				"require=\\storm-core-b42${getEnvSuffix()}",
            ].join('\n')
		}
	}

	tasks.register('generateWorkshopFile') {
		def info = project.extensions.getByType(ModInfo)
		def outputFile = layout.buildDirectory.file('generated/workshop.txt')

		outputs.file(outputFile)

		inputs.property('id', info.workshopId.orElse(''))
		inputs.property('title', info.workshopTitle.orElse(info.name))
		inputs.property('description', info.description.orElse(''))
		inputs.property('tags', info.workshopTags.orElse('Build 42'))
		inputs.property('visibility', getWorkshopVisibility())
		inputs.property('modId', info.id.orElse("${subproj.name}-b42${getEnvSuffix()}"))

		doLast {
			def file = outputFile.get().asFile
			file.parentFile.mkdirs()

			def workshopId = info.workshopId.getOrElse('')
			def modId = info.id.getOrElse("${subproj.name}-b42${getEnvSuffix()}")
			def descriptionWithFooter = info.description.getOrElse("").trim() + "\n\n[hr][/hr]\nWorkshop ID: ${workshopId}\nMod ID: ${modId}"
			def formattedDescription = descriptionWithFooter.split('\n').join('\ndescription=')

			file.text = [
					"version=2",
					"id=${workshopId}",
					"title=${info.workshopTitle.getOrElse(info.name.get())}",
					"description=${formattedDescription}",
					"tags=${info.workshopTags.getOrElse('Build 42')}",
					"visibility=${getWorkshopVisibility()}",
			].join('\n')
		}
	}

	tasks.register('deployMod', Sync) {
		dependsOn jar, 'writeModInfo', 'generateWorkshopFile'

		def workshopRoot = getLocalProperty('zomboidDir').map {
			"${it}/Workshop/${subproj.name}-b42${getEnvSuffix()}"
		}
		def modRoot = "Contents/mods/${subproj.name}-b42${getEnvSuffix()}"

		from(jar) {
			into "${modRoot}/42"
		}

		from(writeModInfo) {
			into "${modRoot}/42"
		}

		from(sourceSets.main.resources.srcDirs) {
			into "${modRoot}/42"
		}

		from(subproj.file('common')) {
			into "${modRoot}/common"
		}

		from(subproj.file('media')) {
			into "${modRoot}/42/media"
		}

		from(generateWorkshopFile) {
			into "."
		}

		def previewFile = subproj.file('preview.png')
		if (!previewFile.exists()) {
			previewFile = rootProject.file('preview.png')
		}

		from(previewFile) {
			into "."
		}

		into workshopRoot

		doLast {
			file("${workshopRoot.get()}/${modRoot}/common").mkdirs()
		}
	}

	tasks.register('writeWorkshopVdf') {
		def info = project.extensions.getByType(ModInfo)
		def workshopDir = getLocalProperty('zomboidDir').map {
			"${it}/Workshop/${subproj.name}-b42${getEnvSuffix()}"
		}
		def outputFile = layout.buildDirectory.file('workshop.vdf')

		inputs.property('appid', '108600')
		inputs.property('publishedfileid', info.workshopId.orElse(''))
		inputs.property('contentfolder', workshopDir.map { "${it}/Contents" })
		inputs.property('previewfile', workshopDir.map { "${it}/preview.png" })
		inputs.property('visibility', getWorkshopVisibility())
		inputs.property('title', info.workshopTitle.orElse(info.name))
		inputs.property('description', info.description.orElse(''))
		inputs.property('changenote', 'Deployment')

		outputs.file(outputFile)

		doLast {
			def f = outputFile.get().asFile
			f.parentFile.mkdirs()
			def escDesc = inputs.properties['description'].replace('\r', '').readLines().collect { it.replaceFirst(/^\s+/, '') }.join('\n').trim().replace('"', "'")
			def escTitle = inputs.properties['title'].replace('"', "'").replace('\r', '').replace('\n', ' ')
			f.text = [
				'"workshopitem"',
				'{',
				"\t\"appid\" \"${inputs.properties['appid']}\"",
				"\t\"publishedfileid\" \"${inputs.properties['publishedfileid']}\"",
				"\t\"contentfolder\" \"${inputs.properties['contentfolder']}\"",
				"\t\"previewfile\" \"${inputs.properties['previewfile']}\"",
				"\t\"visibility\" \"${inputs.properties['visibility']}\"",
				"\t\"title\" \"${escTitle}\"",
				"\t\"description\" \"${escDesc}\"",
				"\t\"changenote\" \"${inputs.properties['changenote']}\"",
				'}'
			].join('\n') + '\n'
		}
	}

	tasks.register('uploadWorkshop', Exec) {
		group = 'publishing'
		description = 'Uploads the mod to the Steam Workshop via steamcmd'

		dependsOn 'writeWorkshopVdf', 'deployMod'

		doFirst {
			def username = System.getenv('STEAM_USERNAME')
			def password = System.getenv('STEAM_PASSWORD')

			if (!username || !password) {
				throw new GradleException('STEAM_USERNAME and STEAM_PASSWORD environment variables must be set')
			}
		}

		def steamcmdPath = "${System.getProperty('user.home')}/Steam/steamcmd.sh"
		commandLine steamcmdPath,
				'+login', System.getenv('STEAM_USERNAME'), System.getenv('STEAM_PASSWORD'),
				'+workshop_build_item', layout.buildDirectory.file('workshop.vdf').get().asFile.absolutePath,
				'+quit'
	}

	spotless {
		java {
			target '**/src/**/*.java'
			cleanthat()
			googleJavaFormat().aosp().reflowLongStrings(false)
			removeUnusedImports()
			trimTrailingWhitespace()
			endWithNewline()
		}
		groovyGradle {
			target '*.gradle'
			greclipse()
		}
		json {
			target '**/*.json'
			gson().indentWithSpaces(2)
		}
		format 'lua', {
			target 'media/**/*.lua'
			nativeCmd('stylua', styluaBinary.absolutePath, ['-'])
			trimTrailingWhitespace()
			endWithNewline()
		}
	}

	afterEvaluate {
		tasks.matching { it.name in ['spotlessLuaCheck', 'spotlessLuaApply'] }
				.configureEach { dependsOn rootProject.tasks.named('installStylua') }
	}

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(25)
		}
	}

	repositories {
		mavenLocal()
		mavenCentral()
	}

	dependencies {
		implementation "com.sentientsimulations:project-zomboid-storm:${stormVersion}"

        compileOnly fileTree(dir: layout.buildDirectory.dir('zomboid-classpath'), include: '*.jar').builtBy('extractZomboidFiles')

		testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
		testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
		testImplementation fileTree(dir: layout.buildDirectory.dir('zomboid-classpath'), include: '*.jar').builtBy('extractZomboidFiles')
	}

	test {
		useJUnitPlatform()
		finalizedBy jacocoTestReport
	}

	tasks.register('unpackZomboidJar', Copy) {
		dependsOn 'extractZomboidFiles'
		from(zipTree(layout.buildDirectory.file('zomboid-classpath/projectzomboid.jar')))
		into layout.buildDirectory.dir('zomboid-classes')
		exclude 'META-INF/versions/**'
	}

	jacocoTestReport {
		dependsOn test, 'unpackZomboidJar'

		def zomboidClasses = layout.buildDirectory.dir('zomboid-classes')
		def zomboidSrcDir = file("${System.getProperty('user.home')}/projects/project-zomboid-base/src/main/java")

		additionalClassDirs(files(zomboidClasses).asFileTree.matching {
			include 'zombie/**'
		})
		additionalSourceDirs(files(zomboidSrcDir))

		reports {
			html.required = true
			xml.required = true
		}
	}
}
